# IceSniff

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  instructions.md
.github/workflows/: ci.yml  cli-release.yml  macos-desktop-release.yml  release-smoke.yml
IceSniffWP/: README.md  package-lock.json  package.json
IceSniffWP/public/: app.js
IceSniffWP/src/layouts/: BaseLayout.astro
IceSniffWP/src/pages/: index.astro
IceSniffWP/src/styles/: global.css
apps/cli/: Cargo.toml
apps/cli/assets/: logo.py
apps/cli/crates/app-services/: Cargo.toml
apps/cli/crates/app-services/src/: lib.rs
apps/cli/crates/capture-engine/: Cargo.toml
apps/cli/crates/capture-engine/src/: lib.rs
apps/cli/crates/file-io/: Cargo.toml
apps/cli/crates/filter-engine/: Cargo.toml
apps/cli/crates/filter-engine/src/: lib.rs
apps/cli/crates/output-formatters/src/: lib.rs
apps/cli/crates/parser-core/src/: lib.rs
apps/cli/crates/protocol-dissectors/src/: lib.rs
apps/cli/crates/session-model/: Cargo.toml
apps/cli/crates/session-model/src/: lib.rs
apps/cli/fixtures/golden/: malformed-truncated-header.pcap.hex  sample.pcapng.hex
apps/cli/install/: install.ps1  install.sh
apps/cli/scripts/: package-cli-bundle.ps1  package-cli-bundle.sh
apps/cli/src/: capture_permissions.rs  filter_input.rs  launcher.rs  logo.rs  main.rs  tui.rs
apps/cli/tests/: cli_smoke.rs
apps/desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
apps/desktop/src/: App.svelte  app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/live/: README.md  package.json  server.mjs
apps/live/public/: app.css  app.js  index.html
apps/macos/: .env.release  .env.supabase.example  .gitignore  Package.resolved  Package.swift  README.md
apps/macos/Sources/IceSniffMac/: AIChatRuntime.swift  AppModel.swift  IceSniffMacApp.swift  ProfileCloudSync.swift  Views.swift
apps/macos/Sources/IceSniffMac/Resources/BundledCLI/: icesniff-capture-helper  icesniff-cli
apps/macos/Sources/IceSniffMac/Resources/BundledTShark/: README.md  WIRESHARK_VERSION.txt
apps/macos/Tests/IceSniffMacTests/: AppModelTests.swift
apps/macos/docs/: appwrite-integration-outline.md  features.md  file-map.md  overview.md  profile-cloud-sync-plan.md  releases-1.1.0.md  runtime-and-backend.md  supabase-auth-setup.md
apps/macos/rust-engine/: Cargo.toml
apps/macos/rust-engine/apps/capture-helper/: Cargo.toml
apps/macos/rust-engine/apps/capture-helper/src/: main.rs
apps/macos/rust-engine/apps/cli/: Cargo.toml
apps/macos/rust-engine/crates/capture-engine/: Cargo.toml
apps/macos/rust-engine/crates/output-formatters/: Cargo.toml
apps/macos/rust-engine/crates/protocol-dissectors/: Cargo.toml
apps/macos/scripts/: inject-bundle-icon.sh  release-macos.sh  sync-bundled-cli.sh  sync-bundled-tshark.sh
apps/windows/: README.md
crates/app-services/: Cargo.toml
crates/app-services/src/: lib.rs
crates/capture-engine/src/: lib.rs
crates/file-io/src/: lib.rs
crates/filter-engine/src/: lib.rs
crates/output-formatters/src/: lib.rs
crates/parser-core/: Cargo.toml
crates/parser-core/src/: lib.rs
crates/protocol-dissectors/src/: lib.rs
crates/session-model/src/: lib.rs
docs/: continuity-log.md  feature-parity-matrix.md  repo-map.md  roadmap.md  task-recipes.md
docs/architecture/: overview.md
docs/cli/: install.md  overview.md
docs/decisions/: ADR-0001-workspace-shape.md  ADR-0002-app-per-platform-repository-shape.md
docs/desktop/: overview.md
docs/media/: logo.py
fixtures/golden/: malformed-invalid-byte-order.pcapng.hex  sample.pcap.hex
media/icesniff.icon/: icon.json
(+13 files in other folders)
