[workspace]
members = [
    "apps/cli",
    "crates/app-services",
    "crates/capture-engine",
    "crates/filter-engine",
    "crates/file-io",
    "crates/output-formatters",
    "crates/parser-core",
    "crates/protocol-dissectors",
    "crates/session-model",
]
exclude = ["apps/desktop/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["IceSniff contributors"]
rust-version = "1.88"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
