[workspace]
members = [
    "crates/app-services",
    "crates/capture-engine",
    "crates/filter-engine",
    "crates/file-io",
    "crates/output-formatters",
    "crates/parser-core",
    "crates/protocol-dissectors",
    "crates/session-model",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["IceSniff contributors"]
rust-version = "1.88"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[package]
name = "icesniff-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
app-services = { path = "crates/app-services" }
crossterm = "0.28"
output-formatters = { path = "crates/output-formatters" }
ratatui = "0.29"
session-model = { path = "crates/session-model" }

[lints]
workspace = true
