[package]
name = "app-services"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
capture-engine = { path = "../capture-engine" }
file-io = { path = "../file-io" }
filter-engine = { path = "../filter-engine" }
parser-core = { path = "../parser-core" }
session-model = { path = "../session-model" }

[lints]
workspace = true
